--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-router": "^3.0.0",
     "react-scripts": "1.1.1",
     "socket.io-client": "^2.0.4"
   },
