--- a/client/package.json
+++ b/client/package.json
@@ -143,6 +143,7 @@
     "react-overdrive": "^0.0.9",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
+    "react-slick": "^0.23.1",
     "react-tap-event-plugin": "^3.0.2",
     "react-toggle-button": "^2.2.0",
     "smoothscroll-polyfill": "^0.4.0",
