--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "mysql2": "^1.5.2",
     "pluralize": "^7.0.0",
     "sequelize": "^4.36.1",
+    "sequelize-cli": "^4.0.0",
     "server": "^1.0.18",
     "socket.io": "^2.0.4"
   },
