--- a/client/package.json
+++ b/client/package.json
@@ -138,6 +138,7 @@
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-bootstrap": "^0.31.5",
+    "react-confirm-bootstrap": "^5.2.1",
     "react-dom": "^16.2.0",
     "react-motion": "^0.5.2",
     "react-notification-system": "^0.2.17",
